Modulación de audio

--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ RustCore/Assets/AudioSettings/audioSettings.txt
 RustCore/Assets/AudioSettings/audioSettings.txt
 RustCore/Assets/VideoSettings/videoSettings.txt
 *.meta
+RustCore/Assets/AudioSettings/audioSettings.txt
